# zephyr

./: CODEOWNERS  MAINTAINERS.yml  west.yml
.handoff/: HANDOFF.md  PLAN.md
doc/: zephyr.doxyfile.in
doc/releases/: migration-guide-4.3.rst
drivers/: CMakeLists.txt  Kconfig
drivers/clock_control/: clock_control_mcux_syscon.c
drivers/counter/: Kconfig  Kconfig.ace  Kconfig.cc23x0_rtc  Kconfig.esp32_tmr  counter_cc23x0_rtc.c  counter_handlers.c  counter_ll_stm32_rtc.c  counter_ll_stm32_timer.c  counter_native_sim.c
drivers/i3c/: CMakeLists.txt  Kconfig  Kconfig.cdns  Kconfig.dw  Kconfig.emul  Kconfig.it51xxx  Kconfig.max32  Kconfig.npcx  Kconfig.nxp  Kconfig.stm32  i3c_ccc.c  (+14 more)
modules/: Kconfig.cmsis  Kconfig.cmsis_dsp  Kconfig.cmsis_nn
tests/drivers/i3c/i3c_emul/: CMakeLists.txt  prj.conf  testcase.yaml
tests/drivers/i3c/i3c_emul/boards/: native_sim.overlay
tests/drivers/i3c/i3c_emul/dts/bindings/: zephyr,i2c-on-i3c-emul-test-target.yaml  zephyr,i3c-emul-test-target.yaml
tests/drivers/i3c/i3c_emul/src/: i2c_test_target_emul.c  i2c_test_target_emul.h  test_async.c  test_ccc.c  test_core.c  test_ibi.c  test_target.c  test_target_emul.c  test_target_emul.h
tests/drivers/i3c/i3c_loopback/: CMakeLists.txt  README.rst  prj.conf  testcase.yaml
tests/drivers/i3c/i3c_loopback/boards/: nucleo_h503rb.overlay
tests/drivers/i3c/i3c_loopback/dts/bindings/: zephyr,i3c-loopback-target.yaml
tests/drivers/i3c/i3c_loopback/src/: common.c  common.h  test_attach.c  test_ccc.c  test_configure.c  test_daa.c  test_hdr_ddr.c  test_ibi.c  test_target_api.c  test_xfer.c
(+94 files in other folders)
